feat: Add health endpoints
